// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 1`] = `
<WithStyles(ExternalLink)
  href="/test/mediaUrl"
  openInNewIcon={false}
  title="video.mp4"
>
  <img
    alt="thumbnail.jpg"
    className=""
    onError={[Function]}
    src="/test/thumbnail/mediaUrl"
  />
</WithStyles(ExternalLink)>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 2`] = `
<pure(BrokenImageIcon)
  color="secondary"
/>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 3`] = `
<WithStyles(ExternalLink)
  href="/test/mediaUrl"
  openInNewIcon={false}
  title="file.random"
>
  <img
    alt="thumbnail.jpg"
    className=""
    onError={[Function]}
    src="/test/thumbnail/mediaUrl"
  />
</WithStyles(ExternalLink)>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 4`] = `
<pure(BrokenImageIcon)
  color="secondary"
/>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 1`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <pure(BrokenImageIcon)
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 2`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title=""
>
  <pure(BrokenImageIcon)
    color="secondary"
  />
</a>
`;
